fix gap

--- a/css/global.css
+++ b/css/global.css
@@ -33,5 +33,5 @@ border-top-right-radius: .8em;
 border-bottom-right-radius : .8em;}
 
 div.header {
-
+background-color: #0F0;
 }
